// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardActionsMenu should match snapshot 1`] = `
<div>
  <div
    class="Menu noselect left "
  >
    <div
      class="menu-contents"
    >
      <div
        class="menu-options"
      >
        <div>
          <div
            aria-label="Delete"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Delete
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div>
          <div
            aria-label="Copy link"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-link-variant LinkIcon"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Copy link
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div />
      </div>
      <div
        class="menu-spacer hideOnWidescreen"
      />
      <div
        class="menu-options hideOnWidescreen"
      >
        <div
          aria-label="Cancel"
          class="MenuOption TextOption menu-option menu-cancel"
          role="button"
        >
          <div
            class="d-flex"
          >
            <div
              class="noicon"
            />
          </div>
          <div
            class="menu-option__content"
          >
            <div
              class="menu-name"
            >
              Cancel
            </div>
          </div>
          <div
            class="noicon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardActionsMenu should match snapshot w/ children prop 1`] = `
<div>
  <div
    class="Menu noselect left "
  >
    <div
      class="menu-contents"
    >
      <div
        class="menu-options"
      >
        <div>
          <div
            aria-label="Delete"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Delete
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div>
          <div
            aria-label="Copy link"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-link-variant LinkIcon"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Copy link
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div>
          Test.
        </div>
      </div>
      <div
        class="menu-spacer hideOnWidescreen"
      />
      <div
        class="menu-options hideOnWidescreen"
      >
        <div
          aria-label="Cancel"
          class="MenuOption TextOption menu-option menu-cancel"
          role="button"
        >
          <div
            class="d-flex"
          >
            <div
              class="noicon"
            />
          </div>
          <div
            class="menu-option__content"
          >
            <div
              class="menu-name"
            >
              Cancel
            </div>
          </div>
          <div
            class="noicon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardActionsMenu should match snapshot w/ onClickDuplicate prop 1`] = `
<div>
  <div
    class="Menu noselect left "
  >
    <div
      class="menu-contents"
    >
      <div
        class="menu-options"
      >
        <div>
          <div
            aria-label="Delete"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Delete
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
          <div
            aria-label="Duplicate"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-content-copy content-copy"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Duplicate
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div>
          <div
            aria-label="Copy link"
            class="MenuOption TextOption menu-option"
            role="button"
          >
            <div
              class="d-flex"
            >
              <div
                class="menu-option__icon"
              >
                <i
                  class="CompassIcon icon-link-variant LinkIcon"
                />
              </div>
            </div>
            <div
              class="menu-option__content"
            >
              <div
                class="menu-name"
              >
                Copy link
              </div>
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
        <div />
      </div>
      <div
        class="menu-spacer hideOnWidescreen"
      />
      <div
        class="menu-options hideOnWidescreen"
      >
        <div
          aria-label="Cancel"
          class="MenuOption TextOption menu-option menu-cancel"
          role="button"
        >
          <div
            class="d-flex"
          >
            <div
              class="noicon"
            />
          </div>
          <div
            class="menu-option__content"
          >
            <div
              class="menu-name"
            >
              Cancel
            </div>
          </div>
          <div
            class="noicon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
